...
        <scene sceneID="Mvf-md-cec">
            <objects>
                <tableViewController id="G2X-ji-wE3" customClass="CarsTableViewController" customModule="Carangas" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="RWD-e3-GF8">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                            <rect key="frame" x="20" y="12" width="33.5" height="20.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <accessibility key="accessibilityConfiguration" identifier="carsCellTitle"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" red="0.20000000000000001" green="0.56470588239999997" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
...
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="carsTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marca" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HaU-vh-yKq">
                                <rect key="frame" x="24" y="160" width="374" height="21"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nome" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TpJ-VD-9BN">
                                <rect key="frame" x="24" y="202" width="366" height="30"/>
                                <constraints>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Preço" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8pD-u5-dPq">
                                <rect key="frame" x="24" y="244" width="366" height="30"/>
                                <constraints>
...
                                    <segment title="Flex"/>
                                    <segment title="Álcool"/>
                                    <segment title="Gasolina"/>
                                </segments>
                            </segmentedControl>
...
