...
        }
    }
    
    /*
    func showAlert(title: String, message: String) {
        let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
        let okAction = UIAlertAction(title: "OK", style: .default) { (_) in
            self.goBack()
        }
        let cancelAction = UIAlertAction(title: "Cancelar", style: .cancel, handler: nil)
        alert.addAction(okAction)
        alert.addAction(cancelAction)
        present(alert, animated: true, completion: nil)
...

extension FormViewController: CarFormViewModelDelegate {
    func onCarCreated(result: Result<Void, CarAPIError>) {
        DispatchQueue.main.async {
            switch result {
            case .success:
                UIAlertController.showAlert(presenter: self, title: "Parabéns!", message: "Seu carro foi criado com sucesso!") { (_) in
                    self.goBack()
                }
                //self.showAlert(title: "Parabéns!", message: "Seu carro foi criado com sucesso!")
            case .failure(let carApiError):
                UIAlertController.showAlert(presenter: self, title: "Erro ao criar o carro!", message: carApiError.errorMessage)
                //self.showAlert(title: "Erro ao criar o carro!", message: carApiError.errorMessage)
...
